--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ a:hover {
 }
 
 nav {
+    z-index: 3;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -54,7 +55,7 @@ nav {
 .logo-container,
 .nav-container {
     width: max-content;
-    height: 10vh;
+    height: 8vh;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -90,8 +91,8 @@ nav {
 }
 
 main {
-    margin-top: 10vh;
-    height: 90vh;
+    margin-top: 8vh;
+    height: 92vh;
     width: 100vw;
     background: var(--light);
 
@@ -99,35 +100,35 @@ main {
 
 @media (max-width: 999px) {
     .mobile-menu {
+        z-index: 0;
+    }
+
+    main {
         z-index: 1;
-    }
-
-    body {
         overflow-x: hidden;
-    }
-
-    li {
-        margin-top: 5px;
-        margin-bottom: 5px;
-        padding: 10px;
+        margin-top: 8vh;
+        height: 92vh;
+        width: 100vw;
     }
 
     .nav-list {
+        z-index: 1;
         position: absolute;
-        top: 10vh;
+        top: 8vh;
         right: 0;
-        width: 60vw;
-        gap: 50px;
+        width: 100vw;
+        height: 30vh;
+        gap: 10px;
         font-size: smaller;
         background-color: var(--dark);
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-        transform: translateX(100%);
+        transform: translateY(-150%);
     }
 
     .nav-list.active {
-        transform: translateX(0);
+        transform: translateY(0);
     }
 }
 
