--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ a:hover {
 }
 
 nav {
-    z-index: 3;
+    z-index: 10000;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 8vh;
     width: 100vw;
@@ -52,14 +52,17 @@ nav {
     left: 0;
 }
 
-.logo-container,
+.logo-container {
+    position: absolute;
+    left: 25px;
+}
 .nav-container {
     width: max-content;
     height: 8vh;
     align-items: center;
     justify-content: center;
     display: flex;
-    margin-left: 20px;
+    margin-left: 50px;
     margin-right: 20px;
 }
 
@@ -70,7 +73,9 @@ nav {
 }
 
 .mobile-menu {
-    z-index: -10;
+    position: absolute;
+    right: 25px;
+    display: none;
     width: 3vw;
     height: 100%;
     display: flex;
@@ -86,16 +91,58 @@ nav {
 }
 
 .fa-solid.fa-bars {
-
+    display: none;
     color: var(--light);
 }
 
 main {
+    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 8vh;
-    height: 92vh;
+    height: 100vh;
     width: 100vw;
+    word-wrap: break-word;
+    overflow-y: scroll;
+    overflow-x: hidden;
     background: var(--light);
 
+}
+
+footer {
+    height: 20vh;
+    width: 100vw;
+    display: flex;
+    background: var(--dark);
+    color: var(--light);
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: center;
+}
+
+footer p {
+    font-size: 10px;
+}
+.toprow-footer, .midrow-footer {
+    width: 100vw;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--accent1);
+
+}
+
+.footer-refferences {
+    display: flex;
+    list-style: none;
+    gap: 50px;
+}
+
+.footer-links {
+    font-weight: 100;
+    font-size: 20px;
+    color: var(--accent1);
 }
 
 @media (max-width: 999px) {
@@ -107,11 +154,19 @@ main {
         z-index: 1;
         overflow-x: hidden;
         margin-top: 8vh;
-        height: 92vh;
+        height: 100vh;
         width: 100vw;
     }
 
+    .fa-solid.fa-bars {
+        display: block;
+    }
+
+    nav{
+        z-index: 1000;
+    }
     .nav-list {
+        display: flex;
         z-index: 1;
         position: absolute;
         top: 8vh;
@@ -124,11 +179,18 @@ main {
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-        transform: translateY(-150%);
+        transition: all .7s ease-out;
+        transform: translateY(-200%);
     }
 
     .nav-list.active {
         transform: translateY(0);
+    }
+}
+
+@media (max-width: 385px) {
+    .logo {
+        font-size: 10px;
     }
 }
 
