--- a/style.css
+++ b/style.css
@@ -146,6 +146,11 @@ footer p {
 }
 
 @media (max-width: 999px) {
+ 
+    body {
+overflow-x: hidden
+}
+
     .mobile-menu {
         z-index: 0;
     }
