--- a/style.css
+++ b/style.css
@@ -96,8 +96,11 @@ nav {
 }
 
 main {
-    margin-left: 10px;
-    margin-right: 10px;
+    padding-top: 50px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 80px;
+
     margin-top: 8vh;
     height: 100vh;
     width: 100vw;
@@ -190,6 +193,14 @@ overflow-x: hidden
 
     .nav-list.active {
         transform: translateY(0);
+    }
+
+    footer {
+        height: 40vh;
+    }
+
+    .footer-refferences {
+        flex-direction: column;
     }
 }
 
